force-app/main/default/objects/Quote/fields/Alerta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se convierte a true cuando el email de Cotizacion Finalizada fue enviado.</description>
    <label>Alerta Enviada</label>
    <type>Checkbox</type>
</CustomField>