force-app/main/default/objects/Quote/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <length>60</length>
    <type>Text</type>
</CustomField>