force-app/main/default/objects/Quote/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>