force-app/main/default/objects/Quote/fields/Contrato_Digital__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Digital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Digital</label>
    <referenceTo>Contrato_Digital__c</referenceTo>
    <relationshipLabel>Presupuestos</relationshipLabel>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>