force-app/main/default/objects/Quote/fields/Eliminar_Campo__c.field-meta.xml
<CustomField>
    <fullName>Eliminar_Campo__c</fullName>
    <label>Eliminar Campo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>