force-app/main/default/objects/Quote/fields/Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente__c</fullName>
    <label>Id Cliente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>