force-app/main/default/objects/Quote/fields/IsFlowUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsFlowUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar que determina si el cambio de estado se hace por flow o manualmente. Con el checkbox en true, el flow Alerta Cotizacion Completa puede correr y hacer el cambio.</description>
    <label>IsFlowUpdate</label>
    <type>Checkbox</type>
</CustomField>