force-app/main/default/objects/Quote/fields/Margen_de_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_Cotizacion__c</fullName>
    <formula>((Precio_Venta_total__c - Costo_total__c) / Precio_Venta_total__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de Cotizacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>