force-app/main/default/objects/Quote/fields/Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Owner_Alias__c</fullName>
    <label>Owner Alias</label>
    <length>30</length>
    <type>Text</type>
</CustomField>