force-app/main/default/objects/Quote/fields/Precio_Venta_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta_total__c</fullName>
    <label>Precio Venta total</label>
    <summarizedField>QuoteLineItem.Precio_deseado__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>