force-app/main/default/objects/Quote/fields/QLI_Rechazados__c.field-meta.xml
<CustomField>
    <fullName>QLI_Rechazados__c</fullName>
    <description>Cuenta cantidad de QLIs que hayan sido rechazados.</description>
    <label>QLI Rechazados</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Estado__c</field>
        <operation>equals</operation>
        <value>Rechazado</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>