force-app/main/default/objects/Quote/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>60</length>
    <type>Text</type>
</CustomField>