force-app/main/default/objects/Quote/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>QuoteAccount.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Cliente</label>
    <type>Text</type>
</CustomField>