force-app/main/default/objects/Quote/validationRules/No_puede_volver_a_Borrador.validationRule-meta.xml
<ValidationRule>
    <fullName>No_puede_volver_a_Borrador</fullName>
    <active>true</active>
    <description>Una vez que el status paso a Aprobado, no puede volver a borrador.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Draft&quot;),
    ISCHANGED(Status),
    NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Draft&quot;)),
    ISPICKVAL(PRIORVALUE(Status), &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>La cotización paso a Aprobada, no puede volver a Borrador.</errorMessage>
</ValidationRule>